<resources>
    <string name="app_name">Dassler Pro</string>
    <string name="error_network">Ошибка сети</string>
    <string name="error_server">Ошибка сервера</string>
    <string name="error_not_found">Не найдена страница</string>
    <string name="error_big_file">Слишком большой размер файла</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Skip">Пропустить</string>
    <string name="Next">Далее</string>
    <string name="slider_desc_1">Покупки стало делать еще выгоднее</string>
    <string name="slider_desc_2">Собирайте купоны и получайте призы</string>
    <string name="slider_desc_3">Лучшие призы только для Вас</string>
    <string name="Continue">Продолжить</string>
    <string name="Begin">Начнем</string>
    <string name="Main">Главная</string>
    <string name="Handbook">Справочник</string>
    <string name="About_us">О нас</string>
    <string name="Profile">Профиль</string>
    <string name="Ok">Хорошо</string>
    <string name="Cancel">Отмена</string>
    <string name="Auth_for_profile_access">Авторизуйтесь для использования личного кабинета</string>
    <string name="Enter">Войти</string>
    <string name="No_internet">Отсутствует интернет подключение</string>
    <string name="Refresh">Обновить</string>
    <string name="Update">Обновление</string>
    <string name="Really_want_to_exit">Вы действительно хотите выйти?</string>
    <string name="app_update_text">Доступно новое обновление. Версия: %1$s</string>
    <string name="to_update">Обновить</string>
    <string name="Our_phoneNumbers">Наши номера</string>
    <string name="We_in_social">Мы в социальных сетях</string>
    <string name="position_amount">%1$d - %2$d</string>
    <string name="About_promotion">О розыгрыше</string>
    <string name="Award_date">Дата розыгрыша</string>
    <string name="award_begin_date">с %1$s</string>
    <string name="award_end_date">по %1$s</string>
    <string name="About_partner">О партнере</string>
    <string name="Social">Соцальные сети</string>
    <string name="Participate">Участвовать</string>
    <string name="Input_code_for_participate">Введите код для участия в акции</string>
    <string name="Send">Отправить</string>
    <string name="Coupon_code">Код купона</string>
    <string name="Coupon_code_not_valid">Не верный код купона</string>
    <string name="Your_coupon_code">Ваш код купона</string>
    <string name="Authorization">Авторизация</string>
    <string name="Authorization_description">Для того что бы использовать наше приложение вам нужно авторизоваться по номеру телефона</string>
    <string name="Confirmation_code">Код подтверждения</string>
    <string name="Confirmation_code_description_with_number">Код был отправлен на номер %1$s <font fgcolor='#BB6BD9'>Неверный номер?</font></string>
    <string name="Confirmation_code_description">Код был отправлен на номер %1$s</string>
    <string name="Send_again">Отправить снова</string>
    <string name="Sms_doesnt_came">Не пришло SMS сообщение?</string>
    <string name="Registration">Регистрация</string>
    <string name="Phone_number">Номер телефона</string>
    <string name="Name">Имя</string>
    <string name="Whats_your_name">Как вас зовут?</string>
    <string name="Your_last_name">Ваша фамилия</string>
    <string name="Last_name">Фамилия</string>
    <string name="Patronymic_name">Отчество</string>
    <string name="Your_patronymic_name">Ваше отчество</string>
    <string name="Privacy_policy_desc"><u>Принимаю условия конфиденциальности и политику безопасности</u></string>
    <string name="Input_data">Введите данные</string>
    <string name="Privacy_policy">Политика конфиденциальности</string>
    <string name="Version">Версия</string>
    <string name="version_number">v %1$s</string>
    <string name="Exit">Выйти</string>
    <string name="Save">Сохранить</string>
    <string name="Phone_number_change">Смена номера</string>
    <string name="Input_new_phone_number">Введите новый номер</string>
    <string name="Cancel_number_change">Отменить смену номера</string>
    <string name="try_again">Поторить еще</string>
    <string name="phone_number_kg_mask">+ 996 (xxx) xxx xxx</string>
    <string name="timer">%02d:%02d</string>
    <string name="Phone_number_change_check">Вы действительно хотите сменить номер?</string>
    <string name="main_page_promotion_greeting">Добрый день</string>
    <string name="main_page_promotion_desc">Мы собрали для вас новые акции</string>
    <string name="platinum">PLATINA</string>
    <string name="golden">GOLD</string>
    <string name="bronze">STANDART</string>
    <string name="Success_number_change">Ваш номер успешно сменен</string>
</resources>