<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/dp_2x"
    android:paddingTop="@dimen/dp_2.5x"
    tools:context=".ui.customLayouts.bottomSheetDialogs.CouponCodeBottomSheetFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            style="@style/BottomSheetTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:text="@string/Input_code_for_participate"
            android:textSize="@dimen/scale_2.25x"
            app:layout_constraintEnd_toStartOf="@id/iv_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="@dimen/ic_close_size"
            android:layout_height="@dimen/ic_close_size"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <kg.sunrise.dasslerpro.ui.customLayouts.views.TextInputView
            android:id="@+id/v_text_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_2.5x"
            app:errorText="@string/Coupon_code_not_valid"
            app:hint="@string/Your_coupon_code"
            app:isRequired="true"
            android:inputType="number"
            app:label="@string/Coupon_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send"
            style="@style/CustomButton.Gray"
            android:clickable="false"
            android:layout_width="0dp"
            android:layout_marginVertical="@dimen/dp_1.25x"
            android:text="@string/Send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_text_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>